finished 2.2 with majority functionality. minor 'duplicate' bug when re-connecting to slave that has become master with two diff clients. also, timeline timestampas on separate clusters are all january first 1970

--- a/mp2_2/Makefile
+++ b/mp2_2/Makefile
@@ -57,7 +57,7 @@ synchronizer: coordinator.pb.o coordinator.grpc.pb.o sns.pb.o sns.grpc.pb.o sync
 	$(PROTOC) -I $(PROTOS_PATH) --cpp_out=. $<
 
 clean:
-	rm -f *.txt *.o *.pb.cc *.pb.h tsc tsd coordinator synchronizer
+	rm -f *.txt *.o *.pb.cc *.pb.h tsc tsd coordinator synchronizer && rm -rf cluster* && rm -rf /dev/shm/*
 
 
 # The following is to test your system and ensure a smoother experience.
